animation overflowing problem solved

--- a/css/custom.css
+++ b/css/custom.css
@@ -82,6 +82,7 @@ body {
 }
 
 .header svg {
+  overflow-x: hidden;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -120,6 +121,8 @@ body {
   }
   100% {
     transform: scalex(1);
+    width: 3000px;
+    height: 490px;
   }
 }
 
